--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
     "inquirer": "^9.2.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "your-package-name": "^0.0.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
