--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
-    /* Modules */
+    //node personalMessage.js* Modules */
     "module": "NodeNext",                                /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
      "moduleResolution": "NodeNext",                     /* Specify how TypeScript looks up a file from a given module specifier. */
